Projeto_Compilador/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMI block DOT
Rule 2     block -> declaration_section func_section declaration_section compound_section
Rule 3     block -> declaration_section compound_section
Rule 4     declaration_section -> <empty>
Rule 5     declaration_section -> VAR declaration_list
Rule 6     declaration_list -> declaration
Rule 7     declaration_list -> declaration_list declaration
Rule 8     declaration -> id_list COLON type SEMI
Rule 9     id_list -> ID
Rule 10    id_list -> id_list COMMA ID
Rule 11    type -> INTEGER
Rule 12    type -> BOOLEAN
Rule 13    type -> STRING
Rule 14    type -> REAL
Rule 15    type -> ARRAY LBRACK NUMBER DOTDOT NUMBER RBRACK OF type
Rule 16    func_section -> <empty>
Rule 17    func_section -> func_section func_declaration
Rule 18    func_declaration -> FUNCTION ID LPAREN parameters RPAREN COLON type SEMI block SEMI
Rule 19    func_declaration -> PROCEDURE ID LPAREN parameters RPAREN SEMI block SEMI
Rule 20    parameters -> <empty>
Rule 21    parameters -> parameter_list
Rule 22    parameter_list -> parameter
Rule 23    parameter_list -> parameter_list SEMI parameter
Rule 24    parameter -> id_list COLON type
Rule 25    compound_section -> BEGIN statement_list END
Rule 26    statement_list -> statement
Rule 27    statement_list -> statement_list SEMI statement
Rule 28    statement -> assign_statement
Rule 29    statement -> if_statement
Rule 30    statement -> while_statement
Rule 31    statement -> for_statement
Rule 32    statement -> repeat_statement
Rule 33    statement -> compound_section_block
Rule 34    statement -> function_call
Rule 35    statement -> write_statement
Rule 36    statement -> read_statement
Rule 37    statement -> <empty>
Rule 38    compound_section_block -> BEGIN statement_list END
Rule 39    assign_statement -> variable ASSIGN expression
Rule 40    variable -> ID
Rule 41    variable -> ID LBRACK expression RBRACK
Rule 42    if_statement -> IF expression THEN statement
Rule 43    if_statement -> IF expression THEN statement ELSE statement
Rule 44    while_statement -> WHILE expression DO statement
Rule 45    for_statement -> FOR variable ASSIGN expression TO expression DO statement
Rule 46    for_statement -> FOR variable ASSIGN expression DOWNTO expression DO statement
Rule 47    repeat_statement -> REPEAT statement_list UNTIL expression
Rule 48    function_call -> ID LPAREN argument_list RPAREN
Rule 49    argument_list -> <empty>
Rule 50    argument_list -> expression
Rule 51    argument_list -> argument_list COMMA expression
Rule 52    write_statement -> write_func LPAREN output_list RPAREN
Rule 53    write_func -> WRITE
Rule 54    write_func -> WRITELN
Rule 55    read_statement -> read_func LPAREN variable_list RPAREN
Rule 56    read_func -> READ
Rule 57    read_func -> READLN
Rule 58    output_list -> expression
Rule 59    output_list -> output_list COMMA expression
Rule 60    variable_list -> variable
Rule 61    variable_list -> variable_list COMMA variable
Rule 62    expression -> logical_expression
Rule 63    logical_expression -> relational_expression
Rule 64    logical_expression -> logical_expression AND relational_expression
Rule 65    logical_expression -> logical_expression OR relational_expression
Rule 66    logical_expression -> NOT relational_expression
Rule 67    relational_expression -> addition_expression
Rule 68    relational_expression -> addition_expression relop addition_expression
Rule 69    relop -> EQ
Rule 70    relop -> NE
Rule 71    relop -> LT
Rule 72    relop -> LE
Rule 73    relop -> GT
Rule 74    relop -> GE
Rule 75    addition_expression -> mult_expression
Rule 76    addition_expression -> addition_expression addop mult_expression
Rule 77    addop -> PLUS
Rule 78    addop -> MINUS
Rule 79    mult_expression -> unary_expression
Rule 80    mult_expression -> mult_expression mulop unary_expression
Rule 81    mulop -> TIMES
Rule 82    mulop -> DIVIDE
Rule 83    mulop -> DIV
Rule 84    mulop -> MOD
Rule 85    unary_expression -> primary_expression
Rule 86    unary_expression -> sign unary_expression
Rule 87    sign -> PLUS
Rule 88    sign -> MINUS
Rule 89    primary_expression -> variable
Rule 90    primary_expression -> NUMBER
Rule 91    primary_expression -> STRING_LITERAL
Rule 92    primary_expression -> TRUE
Rule 93    primary_expression -> FALSE
Rule 94    primary_expression -> LPAREN expression RPAREN
Rule 95    primary_expression -> function_call
Rule 96    primary_expression -> CHAR_LITERAL

Terminals, with rules where they appear

AND                  : 64
ARRAY                : 15
ASSIGN               : 39 45 46
BEGIN                : 25 38
BOOLEAN              : 12
CHAR_LITERAL         : 96
COLON                : 8 18 24
COMMA                : 10 51 59 61
DIV                  : 83
DIVIDE               : 82
DO                   : 44 45 46
DOT                  : 1
DOTDOT               : 15
DOWNTO               : 46
ELSE                 : 43
END                  : 25 38
EQ                   : 69
FALSE                : 93
FOR                  : 45 46
FUNCTION             : 18
GE                   : 74
GT                   : 73
ID                   : 1 9 10 18 19 40 41 48
IF                   : 42 43
INTEGER              : 11
LBRACK               : 15 41
LE                   : 72
LPAREN               : 18 19 48 52 55 94
LT                   : 71
MINUS                : 78 88
MOD                  : 84
NE                   : 70
NOT                  : 66
NUMBER               : 15 15 90
OF                   : 15
OR                   : 65
PLUS                 : 77 87
PROCEDURE            : 19
PROGRAM              : 1
RBRACK               : 15 41
READ                 : 56
READLN               : 57
REAL                 : 14
REPEAT               : 47
RPAREN               : 18 19 48 52 55 94
SEMI                 : 1 8 18 18 19 19 23 27
STRING               : 13
STRING_LITERAL       : 91
THEN                 : 42 43
TIMES                : 81
TO                   : 45
TRUE                 : 92
UNTIL                : 47
VAR                  : 5
WHILE                : 44
WRITE                : 53
WRITELN              : 54
error                : 

Nonterminals, with rules where they appear

addition_expression  : 67 68 68 76
addop                : 76
argument_list        : 48 51
assign_statement     : 28
block                : 1 18 19
compound_section     : 2 3
compound_section_block : 33
declaration          : 6 7
declaration_list     : 5 7
declaration_section  : 2 2 3
expression           : 39 41 42 43 44 45 45 46 46 47 50 51 58 59 94
for_statement        : 31
func_declaration     : 17
func_section         : 2 17
function_call        : 34 95
id_list              : 8 10 24
if_statement         : 29
logical_expression   : 62 64 65
mulop                : 80
mult_expression      : 75 76 80
output_list          : 52 59
parameter            : 22 23
parameter_list       : 21 23
parameters           : 18 19
primary_expression   : 85
program              : 0
read_func            : 55
read_statement       : 36
relational_expression : 63 64 65 66
relop                : 68
repeat_statement     : 32
sign                 : 86
statement            : 26 27 42 43 43 44 45 46
statement_list       : 25 27 38 47
type                 : 8 15 18 24
unary_expression     : 79 80 86
variable             : 39 45 46 60 61 89
variable_list        : 55 61
while_statement      : 30
write_func           : 52
write_statement      : 35

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMI block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMI block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMI block DOT

    SEMI            shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMI . block DOT
    (2) block -> . declaration_section func_section declaration_section compound_section
    (3) block -> . declaration_section compound_section
    (4) declaration_section -> .
    (5) declaration_section -> . VAR declaration_list

  ! shift/reduce conflict for VAR resolved as shift
    BEGIN           reduce using rule 4 (declaration_section -> .)
    FUNCTION        reduce using rule 4 (declaration_section -> .)
    PROCEDURE       reduce using rule 4 (declaration_section -> .)
    VAR             shift and go to state 7

  ! VAR             [ reduce using rule 4 (declaration_section -> .) ]

    block                          shift and go to state 5
    declaration_section            shift and go to state 6

state 5

    (1) program -> PROGRAM ID SEMI block . DOT

    DOT             shift and go to state 8


state 6

    (2) block -> declaration_section . func_section declaration_section compound_section
    (3) block -> declaration_section . compound_section
    (16) func_section -> .
    (17) func_section -> . func_section func_declaration
    (25) compound_section -> . BEGIN statement_list END

  ! shift/reduce conflict for BEGIN resolved as shift
    VAR             reduce using rule 16 (func_section -> .)
    FUNCTION        reduce using rule 16 (func_section -> .)
    PROCEDURE       reduce using rule 16 (func_section -> .)
    BEGIN           shift and go to state 11

  ! BEGIN           [ reduce using rule 16 (func_section -> .) ]

    func_section                   shift and go to state 9
    compound_section               shift and go to state 10

state 7

    (5) declaration_section -> VAR . declaration_list
    (6) declaration_list -> . declaration
    (7) declaration_list -> . declaration_list declaration
    (8) declaration -> . id_list COLON type SEMI
    (9) id_list -> . ID
    (10) id_list -> . id_list COMMA ID

    ID              shift and go to state 15

    declaration_list               shift and go to state 12
    declaration                    shift and go to state 13
    id_list                        shift and go to state 14

state 8

    (1) program -> PROGRAM ID SEMI block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMI block DOT .)


state 9

    (2) block -> declaration_section func_section . declaration_section compound_section
    (17) func_section -> func_section . func_declaration
    (4) declaration_section -> .
    (5) declaration_section -> . VAR declaration_list
    (18) func_declaration -> . FUNCTION ID LPAREN parameters RPAREN COLON type SEMI block SEMI
    (19) func_declaration -> . PROCEDURE ID LPAREN parameters RPAREN SEMI block SEMI

    BEGIN           reduce using rule 4 (declaration_section -> .)
    VAR             shift and go to state 7
    FUNCTION        shift and go to state 18
    PROCEDURE       shift and go to state 19

    declaration_section            shift and go to state 16
    func_declaration               shift and go to state 17

state 10

    (3) block -> declaration_section compound_section .

    DOT             reduce using rule 3 (block -> declaration_section compound_section .)
    SEMI            reduce using rule 3 (block -> declaration_section compound_section .)


state 11

    (25) compound_section -> BEGIN . statement_list END
    (26) statement_list -> . statement
    (27) statement_list -> . statement_list SEMI statement
    (28) statement -> . assign_statement
    (29) statement -> . if_statement
    (30) statement -> . while_statement
    (31) statement -> . for_statement
    (32) statement -> . repeat_statement
    (33) statement -> . compound_section_block
    (34) statement -> . function_call
    (35) statement -> . write_statement
    (36) statement -> . read_statement
    (37) statement -> .
    (39) assign_statement -> . variable ASSIGN expression
    (42) if_statement -> . IF expression THEN statement
    (43) if_statement -> . IF expression THEN statement ELSE statement
    (44) while_statement -> . WHILE expression DO statement
    (45) for_statement -> . FOR variable ASSIGN expression TO expression DO statement
    (46) for_statement -> . FOR variable ASSIGN expression DOWNTO expression DO statement
    (47) repeat_statement -> . REPEAT statement_list UNTIL expression
    (38) compound_section_block -> . BEGIN statement_list END
    (48) function_call -> . ID LPAREN argument_list RPAREN
    (52) write_statement -> . write_func LPAREN output_list RPAREN
    (55) read_statement -> . read_func LPAREN variable_list RPAREN
    (40) variable -> . ID
    (41) variable -> . ID LBRACK expression RBRACK
    (53) write_func -> . WRITE
    (54) write_func -> . WRITELN
    (56) read_func -> . READ
    (57) read_func -> . READLN

    END             reduce using rule 37 (statement -> .)
    SEMI            reduce using rule 37 (statement -> .)
    IF              shift and go to state 33
    WHILE           shift and go to state 34
    FOR             shift and go to state 35
    REPEAT          shift and go to state 36
    BEGIN           shift and go to state 20
    ID              shift and go to state 37
    WRITE           shift and go to state 40
    WRITELN         shift and go to state 41
    READ            shift and go to state 42
    READLN          shift and go to state 43

    statement_list                 shift and go to state 21
    statement                      shift and go to state 22
    assign_statement               shift and go to state 23
    if_statement                   shift and go to state 24
    while_statement                shift and go to state 25
    for_statement                  shift and go to state 26
    repeat_statement               shift and go to state 27
    compound_section_block         shift and go to state 28
    function_call                  shift and go to state 29
    write_statement                shift and go to state 30
    read_statement                 shift and go to state 31
    variable                       shift and go to state 32
    write_func                     shift and go to state 38
    read_func                      shift and go to state 39

state 12

    (5) declaration_section -> VAR declaration_list .
    (7) declaration_list -> declaration_list . declaration
    (8) declaration -> . id_list COLON type SEMI
    (9) id_list -> . ID
    (10) id_list -> . id_list COMMA ID

    BEGIN           reduce using rule 5 (declaration_section -> VAR declaration_list .)
    VAR             reduce using rule 5 (declaration_section -> VAR declaration_list .)
    FUNCTION        reduce using rule 5 (declaration_section -> VAR declaration_list .)
    PROCEDURE       reduce using rule 5 (declaration_section -> VAR declaration_list .)
    ID              shift and go to state 15

    declaration                    shift and go to state 44
    id_list                        shift and go to state 14

state 13

    (6) declaration_list -> declaration .

    ID              reduce using rule 6 (declaration_list -> declaration .)
    BEGIN           reduce using rule 6 (declaration_list -> declaration .)
    VAR             reduce using rule 6 (declaration_list -> declaration .)
    FUNCTION        reduce using rule 6 (declaration_list -> declaration .)
    PROCEDURE       reduce using rule 6 (declaration_list -> declaration .)


state 14

    (8) declaration -> id_list . COLON type SEMI
    (10) id_list -> id_list . COMMA ID

    COLON           shift and go to state 45
    COMMA           shift and go to state 46


state 15

    (9) id_list -> ID .

    COLON           reduce using rule 9 (id_list -> ID .)
    COMMA           reduce using rule 9 (id_list -> ID .)


state 16

    (2) block -> declaration_section func_section declaration_section . compound_section
    (25) compound_section -> . BEGIN statement_list END

    BEGIN           shift and go to state 11

    compound_section               shift and go to state 47

state 17

    (17) func_section -> func_section func_declaration .

    VAR             reduce using rule 17 (func_section -> func_section func_declaration .)
    FUNCTION        reduce using rule 17 (func_section -> func_section func_declaration .)
    PROCEDURE       reduce using rule 17 (func_section -> func_section func_declaration .)
    BEGIN           reduce using rule 17 (func_section -> func_section func_declaration .)


state 18

    (18) func_declaration -> FUNCTION . ID LPAREN parameters RPAREN COLON type SEMI block SEMI

    ID              shift and go to state 48


state 19

    (19) func_declaration -> PROCEDURE . ID LPAREN parameters RPAREN SEMI block SEMI

    ID              shift and go to state 49


state 20

    (38) compound_section_block -> BEGIN . statement_list END
    (26) statement_list -> . statement
    (27) statement_list -> . statement_list SEMI statement
    (28) statement -> . assign_statement
    (29) statement -> . if_statement
    (30) statement -> . while_statement
    (31) statement -> . for_statement
    (32) statement -> . repeat_statement
    (33) statement -> . compound_section_block
    (34) statement -> . function_call
    (35) statement -> . write_statement
    (36) statement -> . read_statement
    (37) statement -> .
    (39) assign_statement -> . variable ASSIGN expression
    (42) if_statement -> . IF expression THEN statement
    (43) if_statement -> . IF expression THEN statement ELSE statement
    (44) while_statement -> . WHILE expression DO statement
    (45) for_statement -> . FOR variable ASSIGN expression TO expression DO statement
    (46) for_statement -> . FOR variable ASSIGN expression DOWNTO expression DO statement
    (47) repeat_statement -> . REPEAT statement_list UNTIL expression
    (38) compound_section_block -> . BEGIN statement_list END
    (48) function_call -> . ID LPAREN argument_list RPAREN
    (52) write_statement -> . write_func LPAREN output_list RPAREN
    (55) read_statement -> . read_func LPAREN variable_list RPAREN
    (40) variable -> . ID
    (41) variable -> . ID LBRACK expression RBRACK
    (53) write_func -> . WRITE
    (54) write_func -> . WRITELN
    (56) read_func -> . READ
    (57) read_func -> . READLN

    END             reduce using rule 37 (statement -> .)
    SEMI            reduce using rule 37 (statement -> .)
    IF              shift and go to state 33
    WHILE           shift and go to state 34
    FOR             shift and go to state 35
    REPEAT          shift and go to state 36
    BEGIN           shift and go to state 20
    ID              shift and go to state 37
    WRITE           shift and go to state 40
    WRITELN         shift and go to state 41
    READ            shift and go to state 42
    READLN          shift and go to state 43

    statement_list                 shift and go to state 50
    statement                      shift and go to state 22
    assign_statement               shift and go to state 23
    if_statement                   shift and go to state 24
    while_statement                shift and go to state 25
    for_statement                  shift and go to state 26
    repeat_statement               shift and go to state 27
    compound_section_block         shift and go to state 28
    function_call                  shift and go to state 29
    write_statement                shift and go to state 30
    read_statement                 shift and go to state 31
    variable                       shift and go to state 32
    write_func                     shift and go to state 38
    read_func                      shift and go to state 39

state 21

    (25) compound_section -> BEGIN statement_list . END
    (27) statement_list -> statement_list . SEMI statement

    END             shift and go to state 51
    SEMI            shift and go to state 52


state 22

    (26) statement_list -> statement .

    END             reduce using rule 26 (statement_list -> statement .)
    SEMI            reduce using rule 26 (statement_list -> statement .)
    UNTIL           reduce using rule 26 (statement_list -> statement .)


state 23

    (28) statement -> assign_statement .

    END             reduce using rule 28 (statement -> assign_statement .)
    SEMI            reduce using rule 28 (statement -> assign_statement .)
    UNTIL           reduce using rule 28 (statement -> assign_statement .)
    ELSE            reduce using rule 28 (statement -> assign_statement .)


state 24

    (29) statement -> if_statement .

    END             reduce using rule 29 (statement -> if_statement .)
    SEMI            reduce using rule 29 (statement -> if_statement .)
    UNTIL           reduce using rule 29 (statement -> if_statement .)
    ELSE            reduce using rule 29 (statement -> if_statement .)


state 25

    (30) statement -> while_statement .

    END             reduce using rule 30 (statement -> while_statement .)
    SEMI            reduce using rule 30 (statement -> while_statement .)
    UNTIL           reduce using rule 30 (statement -> while_statement .)
    ELSE            reduce using rule 30 (statement -> while_statement .)


state 26

    (31) statement -> for_statement .

    END             reduce using rule 31 (statement -> for_statement .)
    SEMI            reduce using rule 31 (statement -> for_statement .)
    UNTIL           reduce using rule 31 (statement -> for_statement .)
    ELSE            reduce using rule 31 (statement -> for_statement .)


state 27

    (32) statement -> repeat_statement .

    END             reduce using rule 32 (statement -> repeat_statement .)
    SEMI            reduce using rule 32 (statement -> repeat_statement .)
    UNTIL           reduce using rule 32 (statement -> repeat_statement .)
    ELSE            reduce using rule 32 (statement -> repeat_statement .)


state 28

    (33) statement -> compound_section_block .

    END             reduce using rule 33 (statement -> compound_section_block .)
    SEMI            reduce using rule 33 (statement -> compound_section_block .)
    UNTIL           reduce using rule 33 (statement -> compound_section_block .)
    ELSE            reduce using rule 33 (statement -> compound_section_block .)


state 29

    (34) statement -> function_call .

    END             reduce using rule 34 (statement -> function_call .)
    SEMI            reduce using rule 34 (statement -> function_call .)
    UNTIL           reduce using rule 34 (statement -> function_call .)
    ELSE            reduce using rule 34 (statement -> function_call .)


state 30

    (35) statement -> write_statement .

    END             reduce using rule 35 (statement -> write_statement .)
    SEMI            reduce using rule 35 (statement -> write_statement .)
    UNTIL           reduce using rule 35 (statement -> write_statement .)
    ELSE            reduce using rule 35 (statement -> write_statement .)


state 31

    (36) statement -> read_statement .

    END             reduce using rule 36 (statement -> read_statement .)
    SEMI            reduce using rule 36 (statement -> read_statement .)
    UNTIL           reduce using rule 36 (statement -> read_statement .)
    ELSE            reduce using rule 36 (statement -> read_statement .)


state 32

    (39) assign_statement -> variable . ASSIGN expression

    ASSIGN          shift and go to state 53


state 33
